<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:visibility="visible">

    <Button
        android:id="@+id/deletebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="30dp"
        android:text="@string/delete"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exitbutton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/restartbutton" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="98dp"
        android:layout_height="21dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="310dp"
        android:text="@string/simple"
        android:textColor="#E5EC14"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/scorerank"
        android:layout_width="88dp"
        android:layout_height="19dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="162dp"
        android:text="@string/scorerank"
        android:textColor="#000002"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/exit"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deletebutton"
        tools:visibility="visible" />

    <Button
        android:id="@+id/restartbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/restart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deletebutton"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="506dp"
        android:layout_marginTop="15dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scorerank"
        tools:visibility="visible">

        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="30dp"
            android:isScrollContainer="true"
            android:visibility="visible"
            tools:visibility="visible">

            <TableRow
                android:id="@+id/tablerowlable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/ranktextview"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ranktextview"
                    android:textColor="#1A237E"
                    android:textSize="16sp"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/nametextview"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nametextview"
                    android:textColor="#1A237E"
                    android:textSize="16sp"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/scoretextview"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/scoretextview"
                    android:textColor="#1A237E"
                    android:textSize="16sp"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/timetextview"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/timetextview"
                    android:textColor="#1A237E"
                    android:textSize="16sp"
                    android:visibility="visible"
                    tools:visibility="visible" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>