<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/standalonebutton"
        android:layout_width="203dp"
        android:layout_height="56dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="119dp"
        android:text="@string/standalonefight"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/networkingfightbutton"
        android:layout_width="203dp"
        android:layout_height="56dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="119dp"
        android:text="@string/networkingfight"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/standalonebutton"
        tools:visibility="visible" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="203dp"
        android:layout_height="56dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="119dp"
        android:text="@string/exit"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkingfightbutton"
        tools:visibility="visible" />

    <Switch
        android:id="@+id/soundeffect"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="216dp"
        android:showText="true"
        android:text="@string/soundeffect"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitButton"
        tools:visibility="visible"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/skinselect"
        android:layout_width="61dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="581dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="87dp"
        android:clickable="true"
        android:contentDescription="@string/skin"
        android:visibility="visible"
        android:src="@drawable/missile_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/missile_bt"

        tools:visibility="visible"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>